# CNN-classification

./: .dockerignore  .env.example  .gitignore  README.md  inspect-data.ipynb  pyproject.toml  run_remote.sh  train.py
deploy/: Dockerfile  api.py  batch_submit.py  config.py  db.py  model_loader.py  schemas.py  verify.sh  worker.py
deploy/templates/: dashboard.html  records.html  review.html
docs/: architecture.md  deployment-runbook.md  development-process.md  future-work.md  model-architecture.md
docs/archive/: further-questions.md
docs/model-reference-code/: train-cnn.ipynb
docs/notebooks/: inspect-data.ipynb
eval/: calibrate_threshold.py  eval_mahalanobis.py  eval_ood.py
tests/: smoke_test.py  test_infra.py
training/: fetch_data.py  load_data.py  train.py
