[project]
name = "cnn-classifier-opensource"
version = "0.1.0"
description = "CNN Example image classifier and deployment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",       # TODO: move to dev/optional deps — not needed in production image
    "matplotlib>=3.10.9",      # TODO: move to dev/optional deps — not needed in production image
    "lakefs>=0.7.0",
    "mlflow>=2.22.0",
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "boto3>=1.35.0",
    "jinja2>=3.1.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.18",
]
